--- a/RazmenaKnjiga/Pages/login.cshtml
+++ b/RazmenaKnjiga/Pages/login.cshtml
@@ -70,6 +70,10 @@
     font-weight: bold;
 }
 
+a {
+    text-decoration: none;
+
+}
 </style>
 
 <div class="form-container">
@@ -84,6 +88,7 @@
 
         <button type="submit">Prijavi se</button>
     </form>
+    <a href="/Register">Nemate nalog? Registrujte se</a>
 </div>
 
 <script type="text/javascript">
@@ -112,11 +117,11 @@
             }
 
             const data = await res.json();
+            localStorage.setItem("korisnik", JSON.stringify(data.korisnik)); // Sačuvaj korisnika u localStorage
             porukaDiv.style.color = "green";
             porukaDiv.innerText = `Uspešno prijavljivanje. Dobrodošao, ${data.korisnik.email}`;
-
-            // Po potrebi: redirect
             window.location.href = "/Index";
+
         } catch (err) {
             porukaDiv.innerText = "Greška u komunikaciji sa serverom.";
         }
